--- a/html/daisyfans.html
+++ b/html/daisyfans.html
@@ -19,7 +19,7 @@
             for (let i = 1; i <= 10; i++) {
                 const img = document.createElement('img');
                 img.src = `${imagefolder}/${i}.jpg`;
-                img.alt = `Daisy ${i}`;
+                img.alt = `Daisy the Rabbit${i}`;
                 document.body.appendChild(img);
                 img.style.display = 'block';
                 img.style.margin = '5 auto';
