--- a/html/main.html
+++ b/html/main.html
@@ -12,6 +12,10 @@
             Welcome, <span id="username"></span>
             <button onclick="logout()" class="logout-button">Logout</button>
         </div>
+        <nav class="admin-nav" id="adminNav" style="display: none;">
+            <a href="/main.html" class="active">Main Page</a>
+            <a href="/users/useradmin.html">User Management</a>
+        </nav>
     </div>
 
     <div class="upload-container">
@@ -47,21 +51,26 @@
     <script>
         // Check session and redirect if not logged in
         async function checkSession() {
-            try {
-                const response = await fetch('/auth/session', {
-                    credentials: 'include'
-                });
-                if (!response.ok) {
-                    window.location.href = '/login.html';
-                    return;
-                }
-                const data = await response.json();
-                document.getElementById('username').textContent = data.user.username;
-            } catch (error) {
-                console.error('Session check error:', error);
-                window.location.href = '/login.html';
-            }
+    try {
+        const response = await fetch('/auth/session', {
+            credentials: 'include'
+        });
+        if (!response.ok) {
+            window.location.href = '/login.html';
+            return;
         }
+        const data = await response.json();
+        document.getElementById('username').textContent = data.user.username;
+        
+        // Show admin navigation if user is an admin
+        if (data.user.role === 'admin') {
+            document.getElementById('adminNav').style.display = 'flex';
+        }
+    } catch (error) {
+        console.error('Session check error:', error);
+        window.location.href = '/login.html';
+    }
+}
 
         async function logout() {
             try {
