--- a/html/users/useradmin.html
+++ b/html/users/useradmin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WAD Manager Admin</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <div class="header">
@@ -14,7 +14,7 @@
         </div>
         <nav class="admin-nav">
             <a href="/main.html">Main Page</a>
-            <a href="/admin/users.html" class="active">User Management</a>
+            <a href="/users/useradmin.html" class="active">User Management</a>
         </nav>
     </div>
 
